[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/Minimapa/Fondo_Minimapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Minimapa/Rele.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/Minimapa/Estacion_Recarga.png" type="Texture" id=3]
[ext_resource path="res://Juego/UI/Minimapa/Base_Enemiga_C.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/Minimapa/Player.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/Minimapa/Enemigo.png" type="Texture" id=8]
[ext_resource path="res://Juego/UI/Minimapa/Minimapa.gd" type="Script" id=9]

[node name="Minimapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -188.0
margin_right = 159.0
margin_bottom = -12.0
rect_min_size = Vector2( 318, 176 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuadroMinimapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMinimapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderizadoMinimapa" type="TextureRect" parent="CuadroMinimapa/ContenedorIconos"]
margin_right = 311.0
margin_bottom = 170.0

[node name="Base_Enemiga" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Estacion_Recarga" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0.929412, 0, 1, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Enemigo" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 1, 0.686275, 0, 1 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="Player" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="Rele" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0, 0.807843, 1, 1 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
